--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "balloon-css": "^1.2.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-bootstrap-datetimepicker": "^5.0.1",
+    "vue-button-spinner": "^2.2.1",
+    "vue-izitoast": "^1.2.1",
+    "vue-meta": "^2.4.0",
+    "vue-router": "^3.3.4",
+    "vue-routisan": "^2.1.4",
+    "vue-spinner": "^1.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
